tests/operator/multiply_nil.my
print(None * 3) # error
